Getting ready for v1.1.3

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -41,12 +41,12 @@ bNativizeOnlySelectedBlueprints=False
 
 [/Script/AkAudio.AkSettings]
 MaxSimultaneousReverbVolumes=4
-WwiseProjectPath=(FilePath="RenewablePower_Project_WwiseProject/RenewablePower_Project_WwiseProject.wproj")
+WwiseProjectPath=(FilePath="RenewablePower_WwiseProject/RenewablePower_WwiseProject.wproj")
 WwiseSoundBankFolder=(Path="WwiseAudio")
 bAutoConnectToWAAPI=False
 DefaultOcclusionCollisionChannel=ECC_Visibility
 bEnableMultiCoreRendering=False
-WwiseWindowsInstallationPath=(Path="C:/Program Files (x86)/Audiokinetic/Wwise 2019.1.3.7048")
+WwiseWindowsInstallationPath=(Path="")
 WwiseMacInstallationPath=(FilePath="")
 
 [/Script/AkAudio.AkAndroidInitializationSettings]
