--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "ModLoader/SML"]
 	path = ModLoader/SML
 	url = https://github.com/satisfactorymodding/SatisfactoryModLoader.git
-	branch = Development
+	branch = master
